# shipit

./: Cargo.toml  DESIGN.md  README.md
documents/: status_structures.md
graphql/: github.graphql  schema.json
src/: cargo.rs  changelog.rs  config.rs  git.rs  github.rs  history.rs  lib.rs  main.rs  manifest.rs  package.rs  util.rs  workspace.rs
src/action/: check.rs  init.rs  mod.rs  status.rs
src/config/: error.rs  mod.rs  project.rs  system.rs  tag.rs
src/github/: mod.rs  pulls.rs  pushed_date.rs  transport.rs
src/workspace/: manifest.rs  mod.rs  package.rs
tests/: config_load.rs  history.rs  init.rs  workspace.rs
tests/fixtures/basic_manifest/: Cargo.toml
tests/support/: fixture.rs  git.rs  github.rs  mod.rs
