[package]
name = "shipit"
version = "0.1.0"
authors = ["Carl Lerche <me@carllerche.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.6", features = ["serde"] }
clap = "2.32.0"
git2 = "0.8.0"
graphql_client = "0.6.0"
reqwest = "0.9.5"
serde = "1.0.84"
semver = { version = "0.9.0", features = ["serde"] }
serde_derive = "1.0.84"
serde_json = "1.0.34"
toml = "0.4.10"
url = "1.7.2"
slog = "2.4.1"
slog-term = "2.4.0"
slog-async = "2.3.0"
