[package]
name = "shipit"
version = "0.1.0"
authors = ["Carl Lerche <me@carllerche.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.6", features = ["serde"] }
clap = "2.33.0"
git2 = "0.8.0"
graphql_client = "0.7.0"
reqwest = "0.9.16"
semver = { version = "0.9.0", features = ["serde"] }
serde = "1.0.91"
serde_derive = "1.0.91"
serde_json = "1.0.38"
toml = "0.5.0"
url = "1.7.2"
slog = "2.4.1"
slog-term = "2.4.0"
slog-async = "2.3.0"

[dev-dependencies]
tempdir = "0.3.7"
fs_extra = "1.1.0"
walkdir = "2.2.7"
